--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,4 +1,4 @@
-name: HyperExecute-Autosplit-6-Concurrency
+name: Github Actions
 on:
   workflow_dispatch:
     inputs:
@@ -10,37 +10,35 @@ on:
         required: true
       sampleRepoLink:
         description: Link to the HyperExecute sample repo
-        default: https://github.com/john190501/hyp-autosplit-2-report-artifact-email
+        default: https://github.com/john190501/hyp-autosplit-6-report-artifact-email
         required: true
 
 jobs:
-  HyperExecute-Autosplit-6-Concurrency:
-    runs-on: windows-latest
+  HyperExecute-Selenium:
+    runs-on: ${{ matrix.os }}
     timeout-minutes: 15
+    strategy:
+      fail-fast: false
+      matrix:
+        os: [windows-latest]
+
     steps:
       - name: Checkout sources
         uses: actions/checkout@v2
-  
-      - name: Download the sample suite
+
+      - name: Starting CLI testing
+        id: hyp-autosplit-6-report-artifact-email
         shell: bash
         run: |
+          echo "STEP 1) Downloading sample suite"
           git clone ${{ github.event.inputs.sampleRepoLink }}
-  
-      - name: Download CLI and setting environment variables
-        shell: bash
-        run: |
-          cd hyp-autosplit-2-report-artifact-email
+          echo "STEP 2) Download CLI and setting environment variables"
+          cd Autosplit-2_Report_Artifacts_Email
           curl https://downloads.lambdatest.com/hyperexecute/windows/hyperexecute.exe -o hyperexecute.exe
-  
-      - name: Setting Environment Variables
-        shell: bash
-        run: |
+          echo "STEP 3) Setting Environment Variables"
           export LT_USERNAME=${{ github.event.inputs.username }}
           export LT_ACCESS_KEY=${{ github.event.inputs.accessKey }}
           echo $LT_USERNAME
           echo $LT_ACCESS_KEY
-  
-      - name: Executing the Job
-        shell: bash
-        run: |
-          hyperexecute --user $LT_USERNAME --key $LT_ACCESS_KEY --config yaml/autosplit_win.yaml --download-artifacts --download-report
+           echo "STEP 4) Executing Job"
+          ./hyperexecute --user $LT_USERNAME --key $LT_ACCESS_KEY --config yaml/autosplit_win.yaml --download-artifacts --download-report
