--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,4 +1,4 @@
-name: Github Actions
+name: HyperExecute-Autosplit-6-Concurrency
 on:
   workflow_dispatch:
     inputs:
@@ -14,31 +14,34 @@ on:
         required: true
 
 jobs:
-  HyperExecute-Selenium:
-    runs-on: ${{ matrix.os }}
+  HyperExecute-Autosplit-6-Concurrency:
+    runs-on: windows-latest
     timeout-minutes: 15
     strategy:
       fail-fast: false
-      matrix:
-        os: [windows-latest]
 
     steps:
       - name: Checkout sources
         uses: actions/checkout@v2
 
-      - name: Starting CLI testing
+      - name: Download the Sample Suite
         id: hyp-autosplit-6-report-artifact-email
         shell: bash
         run: |
-          echo "STEP 1) Downloading sample suite"
           git clone ${{ github.event.inputs.sampleRepoLink }}
-          echo "STEP 2) Download CLI and setting environment variables"
+      
+      - name: Download CLI and setting environment variables
+        id: hyp-autosplit-6-report-artifact-email
+        shell: bash
+        run: |
           cd hyp-autosplit-6-report-artifact-email
           curl https://downloads.lambdatest.com/hyperexecute/windows/hyperexecute.exe -o hyperexecute.exe
-          echo "STEP 3) Setting Environment Variables"
           export LT_USERNAME=${{ github.event.inputs.username }}
           export LT_ACCESS_KEY=${{ github.event.inputs.accessKey }}
           echo $LT_USERNAME
           echo $LT_ACCESS_KEY
-           echo "STEP 4) Executing Job"
+      - name: Executing Job
+        id: hyp-autosplit-6-report-artifact-email
+        shell: bash
+        run: |
           ./hyperexecute --user $LT_USERNAME --key $LT_ACCESS_KEY --config yaml/autosplit_win.yaml --download-artifacts --download-report
