--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -10,38 +10,26 @@ on:
         required: true
       sampleRepoLink:
         description: Link to the HyperExecute sample repo
-        default: https://github.com/john190501/hyp-autosplit-6-report-artifact-email
-        required: true
-
+        default: https://github.com/john190501/hyp-autosplit-2-report-artifact-email
+  
 jobs:
   HyperExecute-Autosplit-6-Concurrency:
-    runs-on: windows-latest
+    runs-on: ubuntu-latest
     timeout-minutes: 15
     strategy:
       fail-fast: false
-
     steps:
       - name: Checkout sources
         uses: actions/checkout@v2
 
-      - name: Download the Sample Suite
-        id: hyp-autosplit-6-report-artifact-email
+      - name: Download CLI and Setting Environment Variables
         shell: bash
         run: |
-          git clone ${{ github.event.inputs.sampleRepoLink }}
+          curl https://downloads.lambdatest.com/hyperexecute/linux/hyperexecute -o hyperexecute
+          chmod +x hyperexecute
       
-      - name: Download CLI and setting environment variables
+      - name: Executing the Job
         shell: bash
         run: |
-          cd hyp-autosplit-6-report-artifact-email
-          curl https://downloads.lambdatest.com/hyperexecute/windows/hyperexecute.exe -o hyperexecute.exe
-          export PATH="$PWD/hyperexecute.exe:$PATH"  # Add directory to PATH
-          export LT_USERNAME=${{ github.event.inputs.username }}
-          export LT_ACCESS_KEY=${{ github.event.inputs.accessKey }}
-          echo $LT_USERNAME
-          echo $LT_ACCESS_KEY
-      
-      - name: Executing Job
-        shell: bash
-        run: |
-          hyperexecute --user $LT_USERNAME --key $LT_ACCESS_KEY --config yaml/autosplit_win.yaml --download-artifacts --download-report
+          ./hyperexecute --user ${{ github.event.inputs.username }} --key ${{ github.event.inputs.accessKey }} --download-artifacts --config yaml/autosplit_win.yaml
+          echo "Test completion"
